--- a/interface_estatica/GoTo/login.html
+++ b/interface_estatica/GoTo/login.html
@@ -23,12 +23,12 @@
             <img alt="image" src="img/logo.png"  style="width: 300px;" />
             <h3 style="margin-top: 20%">Bem vindo(a) ao GoTo</h3>
             <p style="margin-bottom: 10%">Para onde você vai hoje?</p>
-            <form class="m-t" role="form" action="index.html">
+            <form class="m-t" role="form" action="home.html">
                 <div class="form-group">
-                    <input class="form-control" placeholder="Usuário" required="">
+                    <input class="form-control" placeholder="Usuário">
                 </div>
                 <div class="form-group">
-                    <input type="password" class="form-control" placeholder="Senha" required="">
+                    <input type="password" class="form-control" placeholder="Senha">
                 </div>
                 <button type="submit" class="btn btn-primary block full-width m-b">Login</button>
                 <p class="text-muted text-center"><small>Não é cadastrado?</small></p>
