--- a/interface_estatica/GoTo/home.html
+++ b/interface_estatica/GoTo/home.html
@@ -20,7 +20,7 @@
     <div id="wrapper">
         <div id="page-wrapper" class="gray-bg">
         <div class="row border-bottom white-bg">
-        <nav class="navbar navbar-static-top" role="navigation">
+        <nav class="navbar navbar-fixed-top" role="navigation">
             <div class="navbar-header" style="margin-left: 1%">
                 <span href="#"><img alt="image" src="img/logo.png" style="width: 90px; margin-top: 13%;"/></span>
             </div>
@@ -42,6 +42,11 @@
                     </li>
                 </ul>
                 <ul class="nav navbar-top-links navbar-right">
+                     <li>
+                        <a href="">
+                            R$ 120,00
+                        </a>
+                     </li>
                      <li>
                         <a href="">
                             <i class="fa fa-map-marker"></i> Campina Grande, PB
