Fix button color

--- a/interface_estatica/GoTo/events.html
+++ b/interface_estatica/GoTo/events.html
@@ -37,7 +37,7 @@
             background-color: #337ab7;
         }
 
-        .btn-blue {
+        .btn-blue, .btn-blue:hover, .btn-blue:active, .btn-blue:focus {
             background-color: #337ab7;
             color: white;
         }
@@ -63,19 +63,19 @@
         <div class="row border-bottom white-bg">
             <nav class="navbar navbar-static-top" role="navigation">
                 <div class="navbar-header" style="margin-left: 1%">
-                    <span href="#"><img alt="image" src="img/logo.png" style="width: 90px; margin-top: 13%;"/></span>
+                    <span href="home.html"><img alt="image" src="img/logo.png" style="width: 90px; margin-top: 13%;"/></span>
                 </div>
                 <div class="navbar-collapse collapse" id="navbar" style="margin-left: 9%">
                     <ul class="nav navbar-nav">
-                        <li class="dropdown">
-                            <a aria-expanded="false" role="button" href="#" class="dropdown-toggle" data-toggle="dropdown"> Início</a>
+                        <li>
+                            <a role="button" href="home.html"> Início</a>
                         </li>
                         <li class="dropdown">
                             <a aria-expanded="false" role="button" href="#" class="dropdown-toggle" data-toggle="dropdown"> Eventos <span class="caret"></span></a>
                             <ul role="menu" class="dropdown-menu">
-                                <li><a href="">Participando</a></li>
-                                <li><a href="">Meus Eventos</a></li>
-                                <li><a href="">Fechados</a></li>
+                                <li><a href="events.html">Participando</a></li>
+                                <li><a href="events.html">Meus Eventos</a></li>
+                                <li><a href="events.html">Fechados</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
@@ -181,7 +181,7 @@
                                                     </i>1/2</span>
                                                 </td>
                                                 <td style="text-align: right">
-                                                    <button class="btn btn-primary btn-blue btn-lg">Ver mais</button>
+                                                    <button class="btn btn-blue btn-lg">Ver mais</button>
                                                 </td>
                                             </tr>
 
