--- a/interface_estatica/GoTo/events.html
+++ b/interface_estatica/GoTo/events.html
@@ -61,7 +61,7 @@
 <div id="wrapper">
     <div id="page-wrapper" class="gray-bg">
         <div class="row border-bottom white-bg">
-            <nav class="navbar navbar-static-top" role="navigation">
+            <nav class="navbar navbar-fixed-top navbar-static-top" role="navigation">
                 <div class="navbar-header" style="margin-left: 1%">
                     <span href="home.html"><img alt="image" src="img/logo.png" style="width: 90px; margin-top: 13%;"/></span>
                 </div>
@@ -83,6 +83,11 @@
                         </li>
                     </ul>
                     <ul class="nav navbar-top-links navbar-right">
+                        <li>
+                            <a href="">
+                                R$ 120,00
+                            </a>
+                        </li>
                         <li>
                             <a href="">
                                 <i class="fa fa-map-marker"></i> Campina Grande, PB
