--- a/interface_estatica/GoTo/home.html
+++ b/interface_estatica/GoTo/home.html
@@ -26,15 +26,16 @@
             </div>
             <div class="navbar-collapse collapse" id="navbar" style="margin-left: 9%">
                 <ul class="nav navbar-nav">
-                    <li class="dropdown">
-                        <a aria-expanded="false" role="button" href="#" class="dropdown-toggle" data-toggle="dropdown"> Início</a>
+                    <li>
+                        <a role="button" href="home.html"> Início</a>
                     </li>
                     <li class="dropdown">
                         <a aria-expanded="false" role="button" href="#" class="dropdown-toggle" data-toggle="dropdown"> Eventos <span class="caret"></span></a>
                         <ul role="menu" class="dropdown-menu">
-                            <li><a href="">Participando</a></li>
-                            <li><a href="">Meus Eventos</a></li>
-                            <li><a href="">Fechados</a></li>
+
+                            <li><a href="events.html">Participando</a></li>
+                            <li><a href="events.html">Meus Eventos</a></li>
+                            <li><a href="events.html">Fechados</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
