Add my account edit

--- a/interface_estatica/GoTo/events.html
+++ b/interface_estatica/GoTo/events.html
@@ -79,7 +79,7 @@
                             </ul>
                         </li>
                         <li class="dropdown">
-                            <a aria-expanded="false" role="button" href="#" class="dropdown-toggle" data-toggle="dropdown"> Minha Conta</a>
+                            <a aria-expanded="false" role="button" href="my_account.html"> Minha Conta</a>
                         </li>
                     </ul>
                     <ul class="nav navbar-top-links navbar-right">
