--- a/interface_estatica/GoTo/events.html
+++ b/interface_estatica/GoTo/events.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>INSPINIA | Dashboard v.4</title>
+    <title>GoTo - Para onde você vai hoje?</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -114,12 +114,18 @@
                                 </div>
                                 <div class="ibox-content">
                                     <div class="row m-b-sm m-t-sm">
-                                        <div class="col-md-1">
-                                            <button type="button" id="loading-example-btn" class="btn btn-white btn-sm"><i class="fa fa-refresh"></i> Refresh</button>
+                                        <div class="col-md-2">
+                                        <div><select class="form-control m-b" >
+                                                <option>Categoria</option>
+                                                <option>option 2</option>
+                                                <option>option 3</option>
+                                                <option>option 4</option>
+                                            </select>
                                         </div>
-                                        <div class="col-md-11">
-                                            <div class="input-group"><input type="text" placeholder="Encontrar evento..." class="input-sm form-control"> <span class="input-group-btn">
-                                        <button type="button" class="btn btn-sm btn-primary"> Buscar</button> </span></div>
+                                        </div>
+                                        <div class="col-md-10">
+                                            <div class="input-group"><input style="height: 35px;" type="text" placeholder="Encontre o estabelecimento..." class="input-sm form-control"> <span class="input-group-btn">
+                                            <button type="button" class="btn btn-sm btn-primary" style="height: 35px;"> Buscar</button> </span></div>
                                         </div>
                                     </div>
 
