Add event details

--- a/interface_estatica/GoTo/events.html
+++ b/interface_estatica/GoTo/events.html
@@ -161,7 +161,7 @@
                                                     </i>4000/10000</span>
                                                 </td>
                                                 <td style="text-align: right">
-                                                    <button class="btn btn-primary btn-lg">Ver mais</button>
+                                                    <a  href="events_detail.html"><button class="btn btn-primary btn-lg">Ver mais</button></a>
                                                 </td>
                                             </tr>
                                             <tr>
@@ -192,7 +192,7 @@
                                                     </i>1/2</span>
                                                 </td>
                                                 <td style="text-align: right">
-                                                    <button class="btn btn-blue btn-lg">Ver mais</button>
+                                                    <a  href="events_detail.html"><button class="btn btn-blue btn-lg">Ver mais</button></a>
                                                 </td>
                                             </tr>
 
@@ -224,7 +224,7 @@
                                                     </i>45/80</span>
                                                 </td>
                                                 <td style="text-align: right">
-                                                    <button class="btn btn-primary btn-lg">Ver mais</button>
+                                                    <a  href="events_detail.html"><button class="btn btn-primary btn-lg">Ver mais</button></a>
                                                 </td>
                                             </tr>
                                             <tr>
@@ -255,7 +255,7 @@
                                                     </i>40/1000</span>
                                                 </td>
                                                 <td style="text-align: right">
-                                                    <button class="btn btn-primary btn-lg">Ver mais</button>
+                                                    <a  href="events_detail.html"><button class="btn btn-primary btn-lg">Ver mais</button></a>
                                                 </td>
                                             </tr>
 
@@ -287,7 +287,7 @@
                                                     </i>40/1000</span>
                                                 </td>
                                                 <td style="text-align: right">
-                                                    <button class="btn btn-primary btn-lg">Ver mais</button>
+                                                    <a  href="events_detail.html"><button class="btn btn-primary btn-lg">Ver mais</button></a>
                                                 </td>
                                             </tr>
                                             <tr>
@@ -318,7 +318,7 @@
                                                     </i>40/1000</span>
                                                 </td>
                                                 <td style="text-align: right">
-                                                    <button class="btn btn-primary btn-lg">Ver mais</button>
+                                                    <a  href="events_detail.html"><button class="btn btn-primary btn-lg">Ver mais</button></a>
                                                 </td>
                                             </tr>
                                             <tr>
@@ -349,7 +349,7 @@
                                                     </i>40/1000</span>
                                                 </td>
                                                 <td style="text-align: right">
-                                                    <button class="btn btn-primary btn-lg">Ver mais</button>
+                                                    <a  href="events_detail.html"><button class="btn btn-primary btn-lg">Ver mais</button></a>
                                                 </td>
                                             </tr>
                                             <tr>
@@ -380,7 +380,7 @@
                                                     </i>40/1000</span>
                                                 </td>
                                                 <td style="text-align: right">
-                                                    <button class="btn btn-primary btn-lg">Ver mais</button>
+                                                    <a  href="events_detail.html"><button class="btn btn-primary btn-lg">Ver mais</button></a>
                                                 </td>
                                             </tr>
                                             </tbody>
