--- a/interface_estatica/GoTo/events.html
+++ b/interface_estatica/GoTo/events.html
@@ -115,11 +115,14 @@
                                 <div class="ibox-content">
                                     <div class="row m-b-sm m-t-sm">
                                         <div class="col-md-2">
-                                        <div><select class="form-control m-b" >
+                                        <div>
+                                            <select class="form-control m-b" >
                                                 <option>Categoria</option>
-                                                <option>option 2</option>
-                                                <option>option 3</option>
-                                                <option>option 4</option>
+                                                <option>Festa</option>
+                                                <option>Música</option>
+                                                <option>Esporte</option>
+                                                <option>Cinema</option>
+                                                <option>Outros</option>
                                             </select>
                                         </div>
                                         </div>
