--- a/interface_estatica/GoTo/home.html
+++ b/interface_estatica/GoTo/home.html
@@ -73,11 +73,14 @@
                         <div class="ibox-content">
                             <div class="row m-b-sm m-t-sm">
                                 <div class="col-md-2">
-                                <div><select class="form-control m-b" >
+                                <div>
+                                    <select class="form-control m-b" >
                                         <option>Categoria</option>
-                                        <option>option 2</option>
-                                        <option>option 3</option>
-                                        <option>option 4</option>
+                                        <option>Festa</option>
+                                        <option>Música</option>
+                                        <option>Esporte</option>
+                                        <option>Cinema</option>
+                                        <option>Outros</option>
                                     </select>
                                 </div>
                                 </div>
@@ -98,7 +101,7 @@
                                         <td class="project-title" style="max-width: 360px;">
                                             <a href="project_detail.html" style="font-size: 20px;">McDonald's</a>
                                             <br/>
-                                            <smal1 style="font-size: 100%">McDonald's Corporation é a maior cadeia mundial de restaurantes de fast food de hambúrguer, servindo cerca de 68 milhões de clientes por dia em 119 países através de 35 mil pontos de venda</small>
+                                            <small style="font-size: 100%">McDonald's Corporation é a maior cadeia mundial de restaurantes de fast food de hambúrguer, servindo cerca de 68 milhões de clientes por dia em 119 países através de 35 mil pontos de venda</small>
                                         </td>
                                         <td class="project-completion">
                                             <p>Rua josé estevão de araujo, 92</p>
@@ -114,7 +117,7 @@
                                         <td class="project-title" style="max-width: 360px;">
                                             <a href="project_detail.html" style="font-size: 20px;">McDonald's</a>
                                             <br/>
-                                            <smal1 style="font-size: 100%">McDonald's Corporation é a maior cadeia mundial de restaurantes de fast food de hambúrguer, servindo cerca de 68 milhões de clientes por dia em 119 países através de 35 mil pontos de venda</small>
+                                            <small style="font-size: 100%">McDonald's Corporation é a maior cadeia mundial de restaurantes de fast food de hambúrguer, servindo cerca de 68 milhões de clientes por dia em 119 países através de 35 mil pontos de venda</small>
                                         </td>
                                         <td class="project-completion">
                                             <p>Rua josé estevão de araujo, 92</p>
@@ -130,7 +133,7 @@
                                         <td class="project-title" style="max-width: 360px;">
                                             <a href="project_detail.html" style="font-size: 20px;">McDonald's</a>
                                             <br/>
-                                            <smal1 style="font-size: 100%">McDonald's Corporation é a maior cadeia mundial de restaurantes de fast food de hambúrguer, servindo cerca de 68 milhões de clientes por dia em 119 países através de 35 mil pontos de venda</small>
+                                            <small style="font-size: 100%">McDonald's Corporation é a maior cadeia mundial de restaurantes de fast food de hambúrguer, servindo cerca de 68 milhões de clientes por dia em 119 países através de 35 mil pontos de venda</small>
                                         </td>
                                         <td class="project-completion">
                                             <p>Rua josé estevão de araujo, 92</p>
@@ -146,7 +149,7 @@
                                         <td class="project-title" style="max-width: 360px;">
                                             <a href="project_detail.html" style="font-size: 20px;">McDonald's</a>
                                             <br/>
-                                            <smal1 style="font-size: 100%">McDonald's Corporation é a maior cadeia mundial de restaurantes de fast food de hambúrguer, servindo cerca de 68 milhões de clientes por dia em 119 países através de 35 mil pontos de venda</small>
+                                            <small style="font-size: 100%">McDonald's Corporation é a maior cadeia mundial de restaurantes de fast food de hambúrguer, servindo cerca de 68 milhões de clientes por dia em 119 países através de 35 mil pontos de venda</small>
                                         </td>
                                         <td class="project-completion">
                                             <p>Rua josé estevão de araujo, 92</p>
