--- a/interface_estatica/GoTo/events_detail.html
+++ b/interface_estatica/GoTo/events_detail.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>INSPINIA | Dashboard v.4</title>
+    <title>GoTo - Para onde você vai hoje?</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -337,6 +337,10 @@
                                 </div>
                                 <div class="ibox-content">
                                     <table class="col-md-12">
+                                        <tr>
+                                            <td><h2>Pessoas</h2></td>
+                                            <td style="text-align: right"><h2>&nbsp;&nbsp;45/60</h2></td>
+                                        </tr>
                                         <tr>
                                             <td><h2>Total</h2></td>
                                             <td style="text-align: right"><h2><b>&nbsp;&nbsp;R$ 400,00</b></h2></td>
