--- a/interface_estatica/GoTo/home.html
+++ b/interface_estatica/GoTo/home.html
@@ -39,7 +39,7 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a aria-expanded="false" role="button" href="#" class="dropdown-toggle" data-toggle="dropdown"> Minha Conta</a>
+                        <a role="button" href="my_account.html"> Minha Conta</a>
                     </li>
                 </ul>
                 <ul class="nav navbar-top-links navbar-right">
@@ -99,7 +99,7 @@
                                             <span href="#"><img alt="image" src="img/mc.png" class="img-circle" style="width: 90px; height: 90px; margin-top: 13%;"/></span>
                                         </td>
                                         <td class="project-title" style="max-width: 360px;">
-                                            <a href="project_detail.html" style="font-size: 20px;">McDonald's</a>
+                                            <a href="lista_empresa.html" style="font-size: 20px;">McDonald's</a>
                                             <br/>
                                             <small style="font-size: 100%">McDonald's Corporation é a maior cadeia mundial de restaurantes de fast food de hambúrguer, servindo cerca de 68 milhões de clientes por dia em 119 países através de 35 mil pontos de venda</small>
                                         </td>
@@ -107,7 +107,7 @@
                                             <p>Rua josé estevão de araujo, 92</p>
                                         </td>
                                         <td class="project-actions">
-                                            <a href="#" class="btn btn-white btn-lg">Ver mais </a>
+                                            <a href="empresa_detail.html" class="btn btn-white btn-lg">Ver mais </a>
                                         </td>
                                     </tr>
                                     <tr>
@@ -115,7 +115,7 @@
                                             <span href="#"><img alt="image" src="img/dominos.png" class="img-circle" style="width: 90px; height: 90px; margin-top: 13%;"/></span>
                                         </td>
                                         <td class="project-title" style="max-width: 360px;">
-                                            <a href="project_detail.html" style="font-size: 20px;">McDonald's</a>
+                                            <a href="lista_empresa.html" style="font-size: 20px;">McDonald's</a>
                                             <br/>
                                             <small style="font-size: 100%">McDonald's Corporation é a maior cadeia mundial de restaurantes de fast food de hambúrguer, servindo cerca de 68 milhões de clientes por dia em 119 países através de 35 mil pontos de venda</small>
                                         </td>
@@ -123,7 +123,7 @@
                                             <p>Rua josé estevão de araujo, 92</p>
                                         </td>
                                         <td class="project-actions">
-                                            <a href="#" class="btn btn-white btn-lg">Ver mais </a>
+                                            <a href="empresa_detail.html" class="btn btn-white btn-lg">Ver mais </a>
                                         </td>
                                     </tr>
                                     <tr>
@@ -131,7 +131,7 @@
                                             <span href="#"><img alt="image" src="img/bk.png" class="img-circle" style="width: 90px; height: 90px; margin-top: 13%;"/></span>
                                         </td>
                                         <td class="project-title" style="max-width: 360px;">
-                                            <a href="project_detail.html" style="font-size: 20px;">McDonald's</a>
+                                            <a href="lista_empresa.html" style="font-size: 20px;">McDonald's</a>
                                             <br/>
                                             <small style="font-size: 100%">McDonald's Corporation é a maior cadeia mundial de restaurantes de fast food de hambúrguer, servindo cerca de 68 milhões de clientes por dia em 119 países através de 35 mil pontos de venda</small>
                                         </td>
@@ -139,7 +139,7 @@
                                             <p>Rua josé estevão de araujo, 92</p>
                                         </td>
                                         <td class="project-actions">
-                                            <a href="#" class="btn btn-white btn-lg">Ver mais </a>
+                                            <a href="empresa_detail.html" class="btn btn-white btn-lg">Ver mais </a>
                                         </td>
                                     </tr>
                                     <tr>
@@ -147,7 +147,7 @@
                                             <span href="#"><img alt="image" src="img/sp.png" class="img-circle" style="width: 90px; height: 90px; margin-top: 13%;"/></span>
                                         </td>
                                         <td class="project-title" style="max-width: 360px;">
-                                            <a href="project_detail.html" style="font-size: 20px;">McDonald's</a>
+                                            <a href="lista_empresa.html" style="font-size: 20px;">McDonald's</a>
                                             <br/>
                                             <small style="font-size: 100%">McDonald's Corporation é a maior cadeia mundial de restaurantes de fast food de hambúrguer, servindo cerca de 68 milhões de clientes por dia em 119 países através de 35 mil pontos de venda</small>
                                         </td>
@@ -155,7 +155,7 @@
                                             <p>Rua josé estevão de araujo, 92</p>
                                         </td>
                                         <td class="project-actions">
-                                            <a href="#" class="btn btn-white btn-lg">Ver mais </a>
+                                            <a href="empresa_detail.html" class="btn btn-white btn-lg">Ver mais </a>
                                         </td>
                                     </tr>
                                     </tbody>
