--- a/interface_estatica/GoTo/empresa_detail.html
+++ b/interface_estatica/GoTo/empresa_detail.html
@@ -10,6 +10,8 @@
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
+    <link href="css/plugins/slick/slick.css" rel="stylesheet">
+    <link href="css/plugins/slick/slick-theme.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
@@ -21,6 +23,10 @@
             padding-top: 0 !important;
             padding-bottom: 0 !important;
             width: 10px;
+        }
+
+        .slick-slider .ibox-content {
+            padding: 10px;
         }
 
         .nao-vou {
@@ -37,9 +43,13 @@
             background-color: #337ab7;
         }
 
-        .btn-blue {
+        .btn-blue, .btn-blue:hover, .btn-blue:active, .btn-blue:focus {
             background-color: #337ab7;
             color: white;
+        }
+
+        .join-vertical-text {
+            margin-bottom: -3px;
         }
 
         .vou tr {
@@ -61,80 +71,110 @@
 <div id="wrapper">
     <div id="page-wrapper" class="gray-bg">
         <div class="row border-bottom white-bg">
-                <nav class="navbar navbar-fixed-top" role="navigation">
-            <div class="navbar-header" style="margin-left: 1%">
-                <span href="#"><img alt="image" src="img/logo.png" style="width: 90px; margin-top: 13%;"/></span>
-            </div>
-            <div class="navbar-collapse collapse" id="navbar" style="margin-left: 9%">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a role="button" href="home.html"> Início</a>
-                    </li>
-                    <li class="dropdown">
-                        <a aria-expanded="false" role="button" href="#" class="dropdown-toggle" data-toggle="dropdown"> Eventos <span class="caret"></span></a>
-                        <ul role="menu" class="dropdown-menu">
-
-                            <li><a href="events.html">Participando</a></li>
-                            <li><a href="events.html">Meus Eventos</a></li>
-                            <li><a href="events.html">Fechados</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a aria-expanded="false" role="button" href="#" class="dropdown-toggle" data-toggle="dropdown"> Minha Conta</a>
-                    </li>
-                </ul>
-                <ul class="nav navbar-top-links navbar-right">
-                     <li>
-                        <a href="">
-                            R$ 120,00
-                        </a>
-                     </li>
-                     <li>
-                        <a href="">
-                            <i class="fa fa-map-marker"></i> Campina Grande, PB
-                        </a>
-                    </li>
-                    <li>
-                        <a href="login.html">
-                            <i class="fa fa-sign-out"></i> Sair
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+            <nav class="navbar navbar-fixed-top navbar-static-top" role="navigation">
+                <div class="navbar-header" style="margin-left: 1%">
+                    <span href="home.html"><img alt="image" src="img/logo.png" style="width: 90px; margin-top: 13%;"/></span>
+                </div>
+                <div class="navbar-collapse collapse" id="navbar" style="margin-left: 9%">
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a role="button" href="home.html"> Início</a>
+                        </li>
+                        <li class="dropdown">
+                            <a aria-expanded="false" role="button" href="#" class="dropdown-toggle" data-toggle="dropdown"> Eventos <span class="caret"></span></a>
+                            <ul role="menu" class="dropdown-menu">
+                                <li><a href="events.html">Participando</a></li>
+                                <li><a href="events.html">Meus Eventos</a></li>
+                                <li><a href="events.html">Fechados</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown">
+                            <a aria-expanded="false" role="button" href="my_account.html"> Minha Conta</a>
+                        </li>
+                    </ul>
+                    <ul class="nav navbar-top-links navbar-right">
+                        <li>
+                            <a href="">
+                                R$ 120,00
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <i class="fa fa-map-marker"></i> Campina Grande, PB
+                            </a>
+                        </li>
+                        <li>
+                            <a href="login.html">
+                                <i class="fa fa-sign-out"></i> Sair
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </div>
         <div class="wrapper wrapper-content">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12">
-                        <div class="wrapper wrapper-content animated fadeInUp">
+                        <div class="row">
+                            <div class="wrapper wrapper-content animated fadeInUp" style="padding-bottom: 0;">
+                                <div class="ibox">
+                                    <div class="ibox-title">
+                                        <h5>Local</h5>
+                                    </div>
+                                    <div class="ibox-content">
+                                        <div class="project-list" style="font-size: 14px">
+                                            <h1 style="margin-bottom: 20px">Universidade Federal de Campina Grande</h1>
 
-                            <div class="ibox">
-                                <div class="ibox-title">
-                                    <h5>Eventos {{nomedaempresa}}</h5>
-                                     <div class="ibox-tools">
-                                        <a class="btn btn-primary" href="new_event.html">Criar Evento</a>
+                                            <div class="join-vertical-text" style="margin-top: 10px">
+                                                <h5 class="join-vertical-text">Rua das Juremas, 666</h5>
+                                                <h5 class="join-vertical-text">Campina Grande - Paraíba</h5>
+                                                <h5>83 3322 2245</h5>
+                                            </div>
+
+                                            <h4 style="margin-top: 30px">Um local aconchegante e familiar. Um local para se passar o tempo e perder a vida</h4>
+
+
+
+                                            <div>
+
+                                                <div class="slick_demo_2" style="margin-top: 20px;width: 97.5%; margin-left: 10px;">
+
+                                                    <div>
+                                                        <div class="ibox-content">
+                                                            <img alt="image" class="img-responsive" src="img/p_big3.jpg">
+                                                        </div>
+                                                    </div>
+                                                    <div>
+                                                        <div class="ibox-content">
+                                                            <img alt="image" class="img-responsive" src="img/p_big1.jpg">
+                                                        </div>
+                                                    </div>
+                                                    <div>
+                                                        <div class="ibox-content">
+                                                            <img alt="image" class="img-responsive" src="img/p_big2.jpg">
+                                                        </div>
+                                                    </div>
+                                                    <div>
+                                                        <div class="ibox-content">
+                                                            <img alt="image" class="img-responsive" src="img/p_big1.jpg">
+                                                        </div>
+                                                    </div>
+                                                </div>
+
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="ibox-content">
-                                    <div class="row m-b-sm m-t-sm">
-                                        <div class="col-md-2">
-                                        <div><select class="form-control m-b" >
-                                                <option>Categoria</option>
-                                                <option>option 2</option>
-                                                <option>option 3</option>
-                                                <option>option 4</option>
-                                            </select>
-                                        </div>
-                                        </div>
-                                        <div class="col-md-10">
-                                            <div class="input-group"><input style="height: 35px;" type="text" placeholder="Encontre o estabelecimento..." class="input-sm form-control"> <span class="input-group-btn">
-                                                <button type="button" class="btn btn-sm btn-primary" style="height: 35px;"> Buscar</button> </span></div>
-                                        </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="wrapper wrapper-content animated fadeInUp" style="padding-top: 0">
+                                <div class="ibox">
+                                    <div class="ibox-title">
+                                        <h5>Eventos Disponíveis</h5>
                                     </div>
-
-                                    <div class="project-list">
-
+                                    <div class="ibox-content">
+                                        <div class="table-responsive" style="max-height: 400px">
                                         <table class="table table-hover">
                                             <tbody>
                                             <tr>
@@ -389,11 +429,11 @@
                                             </tr>
                                             </tbody>
                                         </table>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
                 </div>
 
             </div>
@@ -431,6 +471,9 @@
 <!-- ChartJS-->
 <script src="js/plugins/chartJs/Chart.min.js"></script>
 
+
+<script src="js/plugins/slick/slick.min.js"></script>
+
 <!-- Peity -->
 <script src="js/plugins/peity/jquery.peity.min.js"></script>
 <!-- Peity demo -->
@@ -440,6 +483,38 @@
 <script>
   $(document).ready(function() {
 
+
+      $('.slick_demo_2').slick({
+        infinite: true,
+        slidesToShow: 3,
+        slidesToScroll: 1,
+        centerMode: true,
+        responsive: [
+          {
+            breakpoint: 1024,
+            settings: {
+              slidesToShow: 3,
+              slidesToScroll: 3,
+              infinite: true,
+              dots: true
+            }
+          },
+          {
+            breakpoint: 600,
+            settings: {
+              slidesToShow: 2,
+              slidesToScroll: 2
+            }
+          },
+          {
+            breakpoint: 480,
+            settings: {
+              slidesToShow: 1,
+              slidesToScroll: 1
+            }
+          }
+        ]
+      });
 
     var d1 = [[1262304000000, 6], [1264982400000, 3057], [1267401600000, 20434], [1270080000000, 31982], [1272672000000, 26602], [1275350400000, 27826], [1277942400000, 24302], [1280620800000, 24237], [1283299200000, 21004], [1285891200000, 12144], [1288569600000, 10577], [1291161600000, 10295]];
     var d2 = [[1262304000000, 5], [1264982400000, 200], [1267401600000, 1605], [1270080000000, 6129], [1272672000000, 11643], [1275350400000, 19055], [1277942400000, 30062], [1280620800000, 39197], [1283299200000, 37000], [1285891200000, 27000], [1288569600000, 21000], [1291161600000, 17000]];
