--- a/interface_estatica/GoTo/events.html
+++ b/interface_estatica/GoTo/events.html
@@ -110,7 +110,7 @@
 
                             <div class="ibox">
                                 <div class="ibox-title">
-                                    <h5>Meus eventos</h5>
+                                    <h5>Meus Eventos</h5>
                                 </div>
                                 <div class="ibox-content">
                                     <div class="row m-b-sm m-t-sm">
@@ -128,13 +128,13 @@
                                         </div>
                                         <div class="col-md-10">
                                             <div class="input-group"><input style="height: 35px;" type="text" placeholder="Encontre o estabelecimento..." class="input-sm form-control"> <span class="input-group-btn">
-                                            <button type="button" class="btn btn-sm btn-primary" style="height: 35px;"> Buscar</button> </span></div>
+                                                <button type="button" class="btn btn-sm btn-primary" style="height: 35px;"> Buscar</button> </span></div>
                                         </div>
                                     </div>
 
                                     <div class="project-list">
 
-                                        <table class="table table-hover">
+                                                                                <table class="table table-hover">
                                             <tbody>
                                             <tr>
                                                 <td class="project-status border-right vou" style="text-align: center">
@@ -143,7 +143,7 @@
                                                     <h4 style="display: block">Feb</h4>
                                                 </td>
                                                 <td class="project-title" style="max-width: 360px;">
-                                                    <a href="project_detail.html">Wesley Safadão</a>
+                                                    <a href="events_detail.html">Wesley Safadão</a>
                                                     <br>
                                                     <small>Conheça a história do cara que saiu da universal e virou programador</small>
                                                     <div style="display: flex; margin-top: 10px">
@@ -164,7 +164,7 @@
                                                     </i>4000/10000</span>
                                                 </td>
                                                 <td style="text-align: right">
-                                                    <a  href="events_detail.html"><button class="btn btn-primary btn-lg">Ver mais</button></a>
+                                                    <button href='events_detail.html' class="btn btn-white btn-lg">Ver mais</button>
                                                 </td>
                                             </tr>
                                             <tr>
@@ -174,7 +174,7 @@
                                                     <h4 style="display: block">Abril</h4>
                                                 </td>
                                                 <td class="project-title" style="max-width: 360px;">
-                                                    <a href="project_detail.html">Jantar dos namorados</a>
+                                                    <a href="events_detail.html">Jantar dos namorados</a>
                                                     <br>
                                                     <small>Venha conhecer o amor da sua vida</small>
                                                     <div style="display: flex; margin-top: 10px">
@@ -195,7 +195,7 @@
                                                     </i>1/2</span>
                                                 </td>
                                                 <td style="text-align: right">
-                                                    <a  href="events_detail.html"><button class="btn btn-blue btn-lg">Ver mais</button></a>
+                                                    <button href='events_detail.html' class="btn btn-white btn-lg">Ver mais</button>
                                                 </td>
                                             </tr>
 
@@ -206,7 +206,7 @@
                                                     <h4 style="display: block">Feb</h4>
                                                 </td>
                                                 <td class="project-title" style="max-width: 360px;">
-                                                    <a href="project_detail.html">TECH Experience</a>
+                                                    <a href="events_detail.html">TECH Experience</a>
                                                     <br>
                                                     <small>Venha participar do 1º Hackathon</small>
                                                     <div style="display: flex; margin-top: 10px">
@@ -227,7 +227,7 @@
                                                     </i>45/80</span>
                                                 </td>
                                                 <td style="text-align: right">
-                                                    <a  href="events_detail.html"><button class="btn btn-primary btn-lg">Ver mais</button></a>
+                                                    <button href="events_detail.html" class="btn btn-white btn-lg">Ver mais</button>
                                                 </td>
                                             </tr>
                                             <tr>
@@ -237,7 +237,7 @@
                                                     <h4 style="display: block">Abril</h4>
                                                 </td>
                                                 <td class="project-title" style="max-width: 360px;">
-                                                    <a href="project_detail.html">Vamos para a vila aquática</a>
+                                                    <a href="events_detail.html">Vamos para a vila aquática</a>
                                                     <br>
                                                     <small>Evento dos estudantes de ciência da computação - UFCG em parceira com o IFPB</small>
                                                     <div style="display: flex; margin-top: 10px">
@@ -258,7 +258,7 @@
                                                     </i>40/1000</span>
                                                 </td>
                                                 <td style="text-align: right">
-                                                    <a  href="events_detail.html"><button class="btn btn-primary btn-lg">Ver mais</button></a>
+                                                    <button href="events_detail.html" class="btn btn-white btn-lg">Ver mais</button>
                                                 </td>
                                             </tr>
 
@@ -269,7 +269,7 @@
                                                     <h4 style="display: block">Feb</h4>
                                                 </td>
                                                 <td class="project-title" style="max-width: 360px;">
-                                                    <a href="project_detail.html">TECH Experience</a>
+                                                    <a href="events_detail.html">TECH Experience</a>
                                                     <br>
                                                     <small>Venha participar do 1º Hackathon</small>
                                                     <div style="display: flex; margin-top: 10px">
@@ -290,7 +290,7 @@
                                                     </i>40/1000</span>
                                                 </td>
                                                 <td style="text-align: right">
-                                                    <a  href="events_detail.html"><button class="btn btn-primary btn-lg">Ver mais</button></a>
+                                                    <button href="events_detail.html" class="btn btn-white btn-lg">Ver mais</button>
                                                 </td>
                                             </tr>
                                             <tr>
@@ -300,7 +300,7 @@
                                                     <h4 style="display: block">Abril</h4>
                                                 </td>
                                                 <td class="project-title" style="max-width: 360px;">
-                                                    <a href="project_detail.html">Vamos para a vila aquática</a>
+                                                    <a href="events_detail.html">Vamos para a vila aquática</a>
                                                     <br>
                                                     <small>Evento dos estudantes de ciência da computação - UFCG em parceira com o IFPB</small>
                                                     <div style="display: flex; margin-top: 10px">
@@ -321,7 +321,7 @@
                                                     </i>40/1000</span>
                                                 </td>
                                                 <td style="text-align: right">
-                                                    <a  href="events_detail.html"><button class="btn btn-primary btn-lg">Ver mais</button></a>
+                                                    <button href="events_detail.html" class="btn btn-white btn-lg">Ver mais</button>
                                                 </td>
                                             </tr>
                                             <tr>
@@ -331,7 +331,7 @@
                                                     <h4 style="display: block">Feb</h4>
                                                 </td>
                                                 <td class="project-title" style="max-width: 360px;">
-                                                    <a href="project_detail.html">TECH Experience</a>
+                                                    <a href="events_detail.html">TECH Experience</a>
                                                     <br>
                                                     <small>Venha participar do 1º Hackathon</small>
                                                     <div style="display: flex; margin-top: 10px">
@@ -352,7 +352,7 @@
                                                     </i>40/1000</span>
                                                 </td>
                                                 <td style="text-align: right">
-                                                    <a  href="events_detail.html"><button class="btn btn-primary btn-lg">Ver mais</button></a>
+                                                    <button href="events_detail.html" class="btn btn-white btn-lg">Ver mais</button>
                                                 </td>
                                             </tr>
                                             <tr>
@@ -362,7 +362,7 @@
                                                     <h4 style="display: block">Abril</h4>
                                                 </td>
                                                 <td class="project-title" style="max-width: 360px;">
-                                                    <a href="project_detail.html">Vamos para a vila aquática</a>
+                                                    <a href="events_detail.html">Vamos para a vila aquática</a>
                                                     <br>
                                                     <small>Evento dos estudantes de ciência da computação - UFCG em parceira com o IFPB</small>
                                                     <div style="display: flex; margin-top: 10px">
@@ -383,7 +383,7 @@
                                                     </i>40/1000</span>
                                                 </td>
                                                 <td style="text-align: right">
-                                                    <a  href="events_detail.html"><button class="btn btn-primary btn-lg">Ver mais</button></a>
+                                                    <button href="events_detail.html" class="btn btn-white btn-lg">Ver mais</button>
                                                 </td>
                                             </tr>
                                             </tbody>
