--- a/interface_estatica/GoTo/my_account.html
+++ b/interface_estatica/GoTo/my_account.html
@@ -92,7 +92,7 @@
                                 </div>
                                 <div class="ibox-content">
 
-                                    <a href="add_card.html">+ Adicionar fundos a sua carteira</a>
+                                    <a href="fundos.html">+ Adicionar fundos a sua carteira</a>
 
                                     <div style="margin-top: 10px">
                                         <div class="col-md-1 no-padding" style="margin-top: 10px;">
@@ -119,7 +119,7 @@
                                         </tbody>
                                     </table>
 
-                                    <a href="add_card.html">Atualizar o metódo de pagamento desta conta</a>
+                                    <a href="metodos.html">Atualizar meios de pagamento desta conta</a>
                                 </div>
                             </div>
                         </div>
