--- a/interface_estatica/GoTo/events_detail.html
+++ b/interface_estatica/GoTo/events_detail.html
@@ -356,7 +356,7 @@
                                     </table>
 
                                     <div class="project-list" style="text-align: center">
-                                        <button class="btn btn-lg btn-primary" style="margin-top: 30px">PARTICIPAR</button>
+                                        <a href="participar.html" class="btn btn-lg btn-primary" style="margin-top: 30px">PARTICIPAR</a>
                                     </div>
                                 </div>
                             </div>
