--- a/interface_estatica/GoTo/lista_empresa.html
+++ b/interface_estatica/GoTo/lista_empresa.html
@@ -146,7 +146,7 @@
                                                 <td class="project-title" style="max-width: 360px;">
                                                     <a href="events_detail.html">Wesley Safadão</a>
                                                     <br>
-                                                    <small>Conheça a história do cara que saiu da universal e virou programador</small>
+                                                    <small></small>
                                                     <div style="display: flex; margin-top: 10px">
                                                         <h4><i class="fa fa-map-marker"></i> Universidade Federal de Campina Grande </h4>
                                                         <h4 style="margin-left: 10px"><i class="fa fa-clock-o"></i> 18:45h </h4>
